# pong-rs

./: .gitignore  Cargo.toml  README.md
src/: ball.rs  main.rs  paddle.rs  test.rs
src/game_state/: countdown.rs  mod.rs  play.rs
